apps/apps/mimir/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mimir
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mimir
  template:
    metadata:
      labels:
        app: mimir
    spec:
      containers:
      - name: mimir
        image: ghcr.io/s1monb/mimir:latest
        ports:
        - containerPort: 80
