apps/apps/mimir/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hugo
spec:
  selector:
    app: hugo
  ports:
  - port: 80
    targetPort: 80
