apps/apps/mimir/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hugo
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  tls:
    - secretName: mimir-tls
      hosts:
        - mimir.valley.no
  rules:
  - host: mimir.valley.no
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hugo
            port:
              number: 80
